<resources>
    <string name="app_name">SmartButler</string>
    <string name="butler">服务管家</string>
    <string name="wechat">微信精选</string>
    <string name="beauty">美女社区</string>
    <string name="user_info">个人中心</string>
    <string name="text_setting">设置</string>
    <string name="user_name">用户名</string>
    <string name="age">年龄</string>
    <string name="text_desc">简介</string>
    <string name="text_boy">男</string>
    <string name="text_girl_f">女</string>
    <string name="text_password">密码</string>
    <string name="text_password_again">再输入一次</string>
    <string name="text_email">邮箱</string>
    <string name="text_register_remind">注册成功需要前往邮箱验证，否则无法登录</string>
    <string name="text_registered">注册</string>
    <string name="edit_password">修改密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="repeat_password">再次输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="text_now_loading">正在载入</string>
    <string name="text_now_login">正在登录</string>
    <string name="camera">拍照</string>
    <string name="from_album">从相册选择</string>
    <string name="cancel">取消</string>
    <string name="text_setting_title_1">语音播报</string>
    <string name="text_setting_content_1">开启之后与服务管家对话语音播报</string>
    <string name="text_setting_title_2">短信提示</string>
    <string name="text_setting_content_2">开启后收到短信将弹框提示</string>
    <string name="text_setting_title_3">检查版本</string>
    <string name="text_setting_content_3">检查版本</string>
    <string name="text_setting_title_4">扫一扫</string>
    <string name="text_setting_content_4">扫一扫</string>
    <string name="text_setting_title_5">我的二维码</string>
    <string name="text_setting_content_5">我的二维码</string>
    <string name="text_setting_title_6">我的位置</string>
    <string name="text_setting_content_6">我的位置</string>
    <string name="text_setting_title_7">关于软件</string>
    <string name="text_setting_content_7">关于软件</string>
</resources>
