<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="bottom"
              android:orientation="vertical"
              android:padding="10dp">
    <Button
        android:id="@+id/btn_camera"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_bg"
        android:text="@string/camera"
        android:textSize="15sp"
        android:textColor="@color/color_white"/>
    <Button
        android:id="@+id/btn_picture"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/from_album"
        android:textSize="15sp"
        android:textColor="@color/color_white"/>
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_bg"
        android:text="@string/cancel"
        android:textSize="15sp"
        android:textColor="@color/color_white"/>

</LinearLayout>